--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="col-xl-5 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-laptop"></i></div>
-              <h4>Virtual Expo</h4>
+              <h4><a href ="">Virtual Expo</a></h4>
               <p>Kami dapat membantu Anda mewujudkan pameran virtual melalui pengembangan website. Berbagai fitur terkini dapat Anda tambahkan untuk meningkatkan interaksi pengunjung acara Anda.</p>
             </div>
           </div>
@@ -150,7 +150,7 @@
           <div class="col-xl-5 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-calendar2-week"></i></div>
-              <h4>Webinar</h4>
+              <h4><a href="">Webinar</a></h4>
               <p>Hadirkan Webinar dengan jangkauan 6000+ peserta dengan dilengkapi berbagai fitur interaktif dan gamifikasi yang membuat event Anda menjadi lebih menarik.</p>
             </div>
           </div>
