--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="col-xl-5 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-calendar2-week"></i></div>
-              <h4><a href="https://svcc.io/webinar-development/">Webinar</a></h4>
+              <h4><a href="">Webinar</a></h4>
               <p>Hadirkan Webinar dengan jangkauan 6000+ peserta dengan dilengkapi berbagai fitur interaktif dan gamifikasi yang membuat event Anda menjadi lebih menarik.</p>
             </div>
           </div>
