--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <p>+6281238800526</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1380437424264!2d106.8422953139956!3d-6.245532762891543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3b9001470bf%3A0x6ba8b244e28bc14!2sPT%20METRA-NET!5e0!3m2!1sid!2sid!4v1647862901706!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1380437424264!2d106.8422953139956!3d-6.245532762891543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3b9001470bf%3A0x6ba8b244e28bc14!2sPT%20METRA-NET!5e0!3m2!1sid!2sid!4v1647862901706!5m2!1sid!2sid" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
           </div>
