--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>PT Metra-Net Mulia Business Park, Building J
-                  Jl. Letjen MT Haryono Kav. 58-60 Pancoran, Jakarta Selatan 12780</p>
+                <p>Jl. A. P. Pettarani No.2, Gn. Sari, Kec. Rappocini, Kota Makassar, Sulawesi Selatan 90221</p>
               </div>
 
               <div class="email">
@@ -253,7 +252,7 @@
                 <p>+6281238800526</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1380437424264!2d106.8422953139956!3d-6.245532762891543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3b9001470bf%3A0x6ba8b244e28bc14!2sPT%20METRA-NET!5e0!3m2!1sid!2sid!4v1647862901706!5m2!1sid!2sid" width="100%" height="290px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15894.278996640383!2d119.4330917!3d-5.1726865!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x34774f1f2ef69c63!2sKantor%20Telkom%20Regional%207!5e0!3m2!1sid!2sid!4v1649110953594!5m2!1sid!2sid" width="100%" height="290px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
           </div>
