--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top ">
+  <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h2 class="logo me-auto"><img src="assets/img/0111 (1).png"></img></h2>
+      <h2 class="logo me-auto" id="logo" ><img src=""></img></h2>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/0111 (1).png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li class="dropdown"><a href="#"><span>Product</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto " href="#about">About</a></li>
+          <li class="dropdown"><a href="#services" class="nav-link scrollto"><span>Product</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Virtual Expo</a></li>
-              <li><a href="#">Webinar</a></li>
+              <li><a href="./virtualexpo.html" class="nav-scroll">Virtual Expo</a></li>
+              <li><a href="./webinar.html" class="nav-scroll">Webinar</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto " href="#contact">Contact</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list mobile-nav-toggle nav-link"></i>
       </nav><!-- .navbar -->
 
     </div>
@@ -69,11 +69,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>A Game-Changer for Your Virtual Event</h1>
-          <h2>Wujudkan pengalaman imersif dengan teknologi virtual pada event Anda.</h2>
+          <h1>The Unexposed World</h1>
+          <h2>Memperkenalkan kepada seluruh dunia permata yang tersembunyi dari Indonesia Timur mulai dari sejarah, budaya dan keindahan alamnya.</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
-            <a href="https://youtu.be/B1WWcMXGnPw" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="https://youtu.be/-9C7RxCq4eQ" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -97,15 +97,15 @@
         <div class="row content">
           <div class="col-lg-6 justify-content-center d-flex align-items-center">
             <h2>
-              Perfect Partner for Your Event
+              Nusantara Assemble x SVCC
           </h2>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              SVCC atau Smarteye Virtual Convention Center merupakan sebuah platform virtual event yang melibatkan pengguna untuk membuat event virtual & hybrid mulai dari conference, webinar, hingga expo secara efisien, cerdas, dan menguntungkan. SVCC dapat membuat Anda menikmati pengalaman baru dengan menggunakan teknologi imersif.
+              Nusantara Assemble adalah platform yang memfasilitasi pengunjung mempelajari sejarah, budaya serta pariwisata Indonesia Timur dikemas dengan menggunakan teknologi Virtual Reality (VR) yang mudah di akses serta memberikan pengalaman yang berbeda dikemas secara online namun terasa nyata dapat dilihat secara panorama 360°.
               <br></p>
              <p>
-               Virtual Reality pada SVCC akan mengajak Anda masuk dan merasakan keseruan berada di lokasi acara secara langsung dengan bantuan teknologi canggih, dan desain animasi 3D visual 360 beresolusi hingga 4K. Anda juga dapat tetap terhubung dengan audiens lain serta berinteraksi menggunakan berbagai fitur interaktif yang menarik dan menghibur. Selain itu, SVCC juga menyediakan analytics tools yang dapat memberikan detail keseluruhan data dari event yang Anda selenggarakan.
+              Nusantara Assemble bekerja sama SVCC mewujudkan virtual expo ini serta memperkenalkan produk SVCC kepada pengunjung yang ingin membuat acara virtual  baik virtual expo dan webinar dengan teknologi digital terbaru serta keuntungan dan kemudahan lainnya dengan adanya fitur menarik yang dapat dinikmati audiens dan menjangkau ribuan audiens.
             </p>
           </div>
         </div>
@@ -123,7 +123,7 @@
                 <p>Kami ingin membantu Anda menjawab pertanyaan seputar produk dan layanan SVCC.</p>
               </div>
               <div class="col-lg-3 cta-btn-container text-center">
-                <a class="cta-btn align-middle" href="#">Call</a>
+                <a class="cta-btn align-middle" href="https://api.whatsapp.com/send?phone=6281238800526&text=Halo%20SVCC%2C%20saya%20ingin%20konsultasi%20terkait%20virtual%20event.">Call</a>
               </div>
             </div>
     
@@ -142,7 +142,7 @@
           <div class="col-xl-5 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-laptop"></i></div>
-              <h4><a href ="">Virtual Expo</a></h4>
+              <h4><a href ="./virtualexpo.html">Virtual Expo</a></h4>
               <p>Kami dapat membantu Anda mewujudkan pameran virtual melalui pengembangan website. Berbagai fitur terkini dapat Anda tambahkan untuk meningkatkan interaksi pengunjung acara Anda.</p>
             </div>
           </div>
@@ -150,7 +150,7 @@
           <div class="col-xl-5 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-calendar2-week"></i></div>
-              <h4><a href="">Webinar</a></h4>
+              <h4><a href="./webinar.html">Webinar</a></h4>
               <p>Hadirkan Webinar dengan jangkauan 6000+ peserta dengan dilengkapi berbagai fitur interaktif dan gamifikasi yang membuat event Anda menjadi lebih menarik.</p>
             </div>
           </div>
@@ -162,63 +162,75 @@
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq section-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
-
-        <div class="faq-list">
-          <ul>
-            <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
-                <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="500">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
-                </p>
-              </div>
-            </li>
-
-          </ul>
+        <div class="row item-center">
+        <div class="col-lg-4">
+          <img src="assets/img/faq.png" class="img-fluid animated" width="100%">
+        </div>        
+        <div class="col-lg-8">
+          <div class="faq-list">
+            <ul>
+              <li data-aos="fade-up" data-aos-delay="100">
+                <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Apa itu NUSANTARA ASSEMBLE? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
+                  <p class="text-justify"> 
+                    Nusantara Assemble adalah platform yang memfasilitasi pengunjung mempelajari sejarah, budaya serta pariwisata Indonesia Timur dikemas dengan menggunakan teknologi Virtual Reality (VR) yang mudah di akses serta memberikan pengalaman yang berbeda dikemas secara online namun terasa nyata dapat dilihat secara panorama 360°.
+                  </p>
+                </div>
+              </li>
+  
+              <li data-aos="fade-up" data-aos-delay="200">
+                <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Apa tujuan dari NUSANTARA ASSEMBLE? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
+                  <p class="text-justify">
+                    Memperkenalkan kepada seluruh dunia permata yang tersembunyi dari Indonesia Timur mulai dari sejarah, budaya dan keindahan alamnya. Harapannya pariwisata Indonesia Timur menjadi lebih baik dan dapat memajukan perekonomian warga sekitar.
+                  </p>
+                </div>
+              </li>
+  
+              <li data-aos="fade-up" data-aos-delay="300">
+                <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Apa yang membuat NUSANTARA ASSEMBLE berbeda dengan jasa virtual event lainnya? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
+                  <p class="text-justify">
+                    NUSANTARA ASSEMBLE merupakan teknologi Virtual Reality (VR) pertama yang memfokuskan pengembangan pada penyediaan fasilitas agar pengunjung dapat mempelajari sejarah, budaya serta pariwisata Indonesia Timur. Dimana seperti yang kita ketahui Indonesia Timur memiliki potensi pariwisata yang sangat luar biasa, namun karena keterbatasan teknologi di Indonesia Timur, menyebabkan sejarah, budaya serta pariwisata Indonesia Timur kurang diberdayakan secara maksimal. Sehingga NUSANTARA ASSEMBLE hadir untuk dapat memperkenalkan Indonesia Timur melalui teknologi ini agar potensi Indonesia Timur tersebut dapat diberdayakan secara maksimal dan nantinya berdampak pada pertumbuhan ekonomi khususnya perekonomian masyarakat Indonesia Timur.
+                  </p>
+                </div>
+              </li>
+  
+              <li data-aos="fade-up" data-aos-delay="400">
+                <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Apakah NUSANTARA ASSEMBLE berdampak positif bagi masyarakat timur? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
+                  <p class="text-justify">
+                    Sesuai dengan tujuan NUSANTARA ASSEMBLE yang telah dijelaskan sebelumnya bahwa NUSANTARA ASSEMBLE bertujuan untuk Memperkenalkan kepada seluruh dunia permata yang tersembunyi dari Indonesia Timur mulai dari sejarah, budaya dan keindahan alamnya. Sehingga nantinya dengan tujuan ini dapat memaksimalkan potensi yang dimiliki oleh masyarakat Indonesia Timur yang nantinya bermanfaat bagi peningkatan ekonomi masyarakat Indonesia Timur.
+                  </p>
+                </div>
+              </li>
+  
+              <li data-aos="fade-up" data-aos-delay="500">
+                <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Bagaimana alur pemesanan produk NUSANTARA ASSEMBLE? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+                  <p class="text-justify">
+                    Produk NUSANTARA ASSEMBLE dapat dipesan melalui langkah-langkah sebagai berikut :
+                    <ol> 
+                      <li>Mengunjungi webside NUSANTARA ASSAMBLE di www.nusantaraassamble.id</li>
+                      <li>Memilih jenis atau bentuk event yang akan dipesan</li>
+                      <li>Melakukan pengisian formulir untuk memasukkan data-data yang diperlukan dalam pemesanan</li>
+                      <li>Konfirmasi pada admin melalui buble chat yang telah disediakan</li>
+                      <li>Menunggu konfirmasi dari admin untuk proses registrasi selanjutnya</li>
+                    </ol>
+                  </p>
+                </div>
+              </li>
+  
+            </ul>
+          </div>
+    
         </div>
-
+      </div>
       </div>
     </section><!-- End Frequently Asked Questions Section -->
 
