--- a/virtualexpo.html
+++ b/virtualexpo.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a class="nav-link scrollto " href="./index.html#hero">Home</a></li>
           <li><a class="nav-link scrollto " href="./index.html#about">About</a></li>
-          <li class="dropdown"><a href="./index.html#services" class="nav-link scrollto"><span>Product</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#" class="nav-link scrollto"><span>Product</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="./virtualexpo.html" class="nav-scroll">Virtual Expo</a></li>
               <li><a href="./webinar.html" class="nav-scroll">Webinar</a></li>
