--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>The Unexposed World</h1>
-          <h2>Memperkenalkan kepada seluruh dunia permata yang tersembunyi dari Indonesia Timur mulai dari sejarah, budaya dan keindahan alamnya.</h2>
+          <h2>Explore the new world with the new ways</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
             <a href="https://youtu.be/-9C7RxCq4eQ" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
