--- a/virtualexpo.html
+++ b/virtualexpo.html
@@ -57,6 +57,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="./index.html#contact">Contact</a></li>
+          <li><a class="getstarted scrollto" href="#">Order Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle nav-link"></i>
       </nav><!-- .navbar -->
@@ -110,7 +111,7 @@
             <div class="portfolio-description">
               <h2>Virtual Expo</h2>
               <p>
-                <B>Virtual Expo</B> <br> <br>
+                
                 Pameran Virtual (Virtual Expo) Merupakan salah satu platform yang kami jalankan dalam membantu perusahaan untuk meningkatkan engagement dengan para customer dengan menyediakan berbagai fitur interaktif melalui konten 3D. 
                 Kami memberikan pengalaman yang baru bagi customer dengan menyediakan berbagai fitur & event yang menarik seperti interactive mission dengan fitur poin dan leaderboard.
                 Virtual expo yang dihadirkan oleh Nusantara Assemble memiliki fitur konten 3D yang dapat memperkenalkan Indonesia Timur kepada masyarakat luas melalui pengalaman virtual yang akan memberikan dampak nyata. 
@@ -130,7 +131,47 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+    <div class="col-lg-4 col-md-6 footer-contact">
+      <h3>Nusantara Assemble</h3>
+      <p>
+        Jl. A. P. Pettarani No.2, Gn. Sari<br>
+        Kec. Rappocini, Kota Makassar <br>
+        Sulawesi Selatan 90221 <br><br>
+        <strong>Phone:</strong> +6281238800526<br>
+        <strong>Email:</strong> infonusantarassemble@gmail.com<br>
+      </p>
+    </div>
+
+    <div class="col-lg-5 col-md-6 footer-links">
+      <h4>Useful Links</h4>
+      <ul>
+        <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
+        <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
+        <li><i class="bx bx-chevron-right"></i> <a href="#services">Product</a></li>
+        <li><i class="bx bx-chevron-right"></i> <a href="#faq">FAQ</a></li>
+      </ul>
+    </div>
+
+    <div class="col-lg-3 col-md-6 footer-links">
+      <h4>Our Social Networks</h4>
+      <p>Keep in touch with us</p>
+      <div class="social-links mt-3">
+        <a href="https://instagram.com/nusantarassemble" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCYHLZMkfasWE-tt7aoaVyyA" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.tiktok.com/@nusantarassemble" class="tiktok"><i class="bx bxl-tiktok"></i></a>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
+
     <div class="container footer-bottom clearfix">
+      <div class="container">
+        <div class="row">
       <div class="copyright">
         &copy; 2022 Copyright <strong><span>SVCC</span></strong>. All Rights Reserved
       </div>
