--- a/virtualexpo.html
+++ b/virtualexpo.html
@@ -91,15 +91,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/hero-img.png" alt="">
+                  <img src="assets/img/VR I.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/webinar2.png" alt="">
+                  <img src="assets/img/VR II.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/webinar3.png" alt="">
+                  <img src="assets/img/VR III.png" alt="">
                 </div>
 
               </div>
