--- a/webinar.html
+++ b/webinar.html
@@ -91,15 +91,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/webinar.png" alt="">
+                  <img src="assets/img/sem 1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/webinar2.png" alt="">
+                  <img src="assets/img/SEM 2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/webinar3.png" alt="">
+                  <img src="assets/img/SEM 3.png" alt="">
                 </div>
 
               </div>
