--- a/webinar.html
+++ b/webinar.html
@@ -116,6 +116,7 @@
                 Memiliki perbedaan dengan webinar biasa, webinar ini akan menghadirkan event yang menyediakan fitur interaktif dan layanan eksklusif.
                
               </p>
+              <a class="btn btn-info" href="#" role="button">Webinar</a>
             </div>
           </div>
 
