make link for button

--- a/page_webinar.html
+++ b/page_webinar.html
@@ -73,7 +73,7 @@
 
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Webinar Details</li>
+          <li>Webinar Page</li>
         </ol>
         <h2>Webinar</h2>
 
