--- a/page_webinar.html
+++ b/page_webinar.html
@@ -8,7 +8,8 @@
   <title>Webinar</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
+  
+  <link rel="icon" href="./assets/img/hero-img.png">
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
