--- a/virtualexpo.html
+++ b/virtualexpo.html
@@ -9,6 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <link rel="icon" href="./assets/img/hero-img.png">
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
