--- a/index.html
+++ b/index.html
@@ -86,6 +86,40 @@
 
   </section><!-- End Hero -->
 
+  <section id="slideDaerah">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/img/sulawesi.jpeg" class="d-block w-100 opacity-25" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>NUSANTARA ASSEMBLE TO <br>  EXPLORE TORAJA</h1>
+            <p>Salama' sitammu mali' sia salama' Umperasai apa ba'ru tu apa Taek bang pa den mi appa' dolona.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/VR I.png" class="d-block w-100 opacity-25" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>SMARTEYE VIRTUAL CONVENTION CENTER <br> AND <br> 3D DESIGN ANIMATION</h1>
+            <p>Nusantara Assemble to Explore Toraja  adalah Sebuah Produk SmartEye Virtual Convention Center yang menyuguhkan Virtual Expo dan Webinar dengan tujuan memperkenalkan dan memperalajari Kebudayaan Toraja melalui konsep dunia imersif dengan penggabungan 360° panorama dari 3D Desain Animasi yang membuatmu merasakan berada di Toraja dimanapun dan kapanpun kamu menggunakannya.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+
   <main id="main">
 
         <!-- ======= Clients Section ======= -->
