--- a/index.html
+++ b/index.html
@@ -90,18 +90,20 @@
     </div>
 
   </section><!-- End Hero -->
-
+  
   <div class="owl-carousel owl-theme">
-    <div class="slide slide-1">
-      <div class="slide-content">
+    <div class="slide slide-1 text-center">
+      <div class="container content-wrapper-1">
+      <div class="slide-content text-center p-5">
         <h1>NUSANTARA ASSEMBLE <br> TO EXPLORE TORAJA</h1>
         <p>Salama' sitammu mali' sia salama' Umperasai apa ba'ru tu apa Taek bang pa den mi appa' dolona.</p>
       </div>
     </div>
+    </div>
     <div class="slide slide-2">
-      <div class="slide-content">
-        <h1>NUSANTARA ASSEMBLE <br> TO EXPLORE TORAJA</h1>
-        <p>Salama' sitammu mali' sia salama' Umperasai apa ba'ru tu apa Taek bang pa den mi appa' dolona.</p>
+      <div class="slide-content text-center p-5">
+        <h1>SMARTEYE VIRTUAL CONVENTION CENTER <br> AND 3D DESIGN ANIMATION</h1>
+        <p>Nusantara Assemble to Explore Toraja  adalah Sebuah Produk SmartEye Virtual Convention Center yang menyuguhkan Virtual Expo dan Webinar dengan tujuan memperkenalkan dan memperalajari Kebudayaan Toraja melalui konsep dunia imersif dengan penggabungan 360° panorama dari 3D Desain Animasi yang membuatmu merasakan berada di Toraja dimanapun dan kapanpun kamu menggunakannya.</p>
       </div>
     </div>
   </div>
