--- a/index.html
+++ b/index.html
@@ -418,9 +418,17 @@
       smartSpeed:1500,
       autoplayHoverPause:true,
       
-    }); 
+    });
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/627d44f37b967b11798f14a7/1g2slalsb';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+  })(); 
   });
-
   </script>
 </body>
 
